[gd_scene load_steps=14 format=2]

[ext_resource path="res://Sprites/Effects/Orb2.png" type="Texture" id=1]
[ext_resource path="res://Scripts/BossOrb.gd" type="Script" id=2]
[ext_resource path="res://Audio/Transform2.ogg" type="AudioStream" id=3]
[ext_resource path="res://Sprites/Characters/Shield.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.109375, 0.723958, 1 )
colors = PoolColorArray( 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.518182 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.506667, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 32.0
initial_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 8 )

[node name="BossOrb" type="Area2D"]
position = Vector2( 24, 56 )
collision_layer = 2147483680
collision_mask = 32
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0, 0.65098, 0.878431, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
disabled = true

[node name="SoundSpawn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -12.0

[node name="PartsSpawn" type="Particles2D" parent="."]
scale = Vector2( 2, 0.8 )
emitting = false
amount = 4
one_shot = true
process_material = SubResource( 6 )
texture = ExtResource( 4 )

[node name="PartsSpawn2" type="Particles2D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
process_material = SubResource( 9 )

[node name="Tween" type="Tween" parent="."]

[node name="TimerDestroy" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="area_entered" from="." to="." method="_on_BossOrb_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_OrbBlue_body_entered"]
[connection signal="timeout" from="TimerDestroy" to="." method="queue_free"]
